tests/analyzer/errors/void_print.rv
fn b() {}

fn main() {
    print b()
}